        are more than two dimensions.

    o	Tabular printing of numbers now has headers right-justified, as
        they were prior to version 1.7.0 (spotted by Rob Baer).

    o   dir.create() has a new argument 'recursive' serving the same
	purpose as Unix's mkdir -p.

    o   scatter.smooth() and loess.smooth() now handle missing values
	in their inputs.


UTILITIES

    o   New functions mirror2html() and checkCRAN().
    

DOCUMENTATION

    o	File doc/html/faq.html no longer exists, and doc/manual/R-FAQ.html
	(which has active links to other manuals) is used instead.
	(If makeinfo >= 4.5 is not available, the version on CRAN is
	linked to.)


C-LEVEL FACILITIES

    o	There are new public C/C++ header files Rinterface.h and
	R_ext/RStartup.h for use with external GUIs.  The API is not
	yet documented.


DEPRECATED & DEFUNCT

    o	The aqua module for MacOS X has been removed: --with-aqua now
	refers to the unbundled Cocoa GUI.

    o	Capabilities "bzip2", "GNOME, "libz" and "PCRE" are defunct.

    o	Capability "IEEE754" is deprecated.


INSTALLATION CHANGES

    o	R_XTRA_[CF]FLAGS are now used during the configuration tests,
	and [CF]PICFLAGS if --enable-R-shlib was specified.  This
	ensures that features such as inlining are only used if the
	compilation flags specified support them.  (PR#7257)

    o	Files FAQ, RESOURCES, doc/html/resources.html are no longer in
	the SVN sources but are made by 'make dist'.

    o	The GNOME GUI is unbundled, currently available by Subversion only.

    o	Configuring without having the recommended packages is now an
	error unless --with-recommended-packages=no is used.


BUG FIXES

    o	Configuring for Tcl/Tk makes use of ${TK_LIB_SPEC} ${TK_LIBS}
	not ${TK_LIB_SPEC} ${TK_XLIBSW}, which is correct for
	recent versions of Tk, but conceivably not for old
	tkConfig.sh files.

    o   Detach was not recomputing the methods for primitives
        correctly.

    o   "raw" added & "expression" partly fixed in basic classes, so