@@ -15,7 +15,8 @@ UseMethod(generic, object)
 NextMethod(generic = NULL, object = NULL, \dots)
 }
 \arguments{
-  \item{generic}{a character string naming a function.}
+  \item{generic}{a character string naming a function. Required for
+    \code{UseMethod}.}
   \item{object}{an object whose class will determine the method to be
     dispatched.  Defaults to the first argument of the enclosing function.}
   \item{\dots}{further arguments to be passed to the method.}
@@ -87,6 +88,12 @@ NextMethod(generic = NULL, object = NULL, \dots)
   The function \code{.isMethodsDispatchOn()} returns \code{TRUE} if
   the S4 method dispatch has been turned on in the evaluator. It is
   meant for \R internal use only.
+}
+\section{Warning}{
+  Prior to \R 2.1.0 \code{UseMethod} accepted a call with no arguments
+  and tried to deduce the generic from the context.  This was
+  undocumented on the help page.  It is allowed but
+  \sQuote{strongly discouraged} in S-PLUS, and is no longer allowed in \R.
 }
 \seealso{
   \code{\link{methods}}, \code{\link[base]{class}}, \code{\link{getS3method}}
